syntax = "proto3";

option java_package = "com.game.proto";
option java_outer_classname = "CommonProto";
package common;

// 双向流服务间调用接口(客户端不断向服务端写，服务端不断向客户端写)
service RouteService {
  rpc routeStream(stream RouteRequest) returns (stream RouteResponse) {};
}

// 路由请求
message RouteRequest {
  optional bytes msg = 1;
}

// 路由响应
message RouteResponse {
  optional bytes msg = 1;
}

// 首包请求
message FIRST_REQ {
  optional int64 playerId = 1;
  optional string serverId = 2;
}
// 首包响应
message FIRST_RESP {
}

// gm请求
message GmReq {
  optional int64 player_id = 1; // 玩家id
  optional string server_id = 2; // 服务器id
  optional string func = 3; // 函数名
  optional string prams = 4; // 函数参数
}

// gm返回
message GmResp {
  optional int64 playerId = 1; // 玩家id
  optional string return = 2; // 返回值
}

// 物品
message MiniItem {
  optional int32 res_id = 1; // 物品配置id
  optional int32 num = 2; // 数量
}

message Prop {
  optional int32 attr_key = 1; // 属性类型
  optional string attr_value = 2; // 属性值
}
